Reverted param deprecation changes, splitting WorkItem search params into exact and 'like' matches.
